--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome to homepage</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Welcome to DevMatch</h1>
+    <h3>A membership site for developers and entrepreneurs to collaborate</h3>
+</div>
