Refactored with sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,38 +17,33 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-//gradients provided by https://uigradients.com/
+//Background gradient - gradients provided by https://uigradients.com/
  .navbar, .home-callout {
     background: #56CCF2;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 } 
 
+// Typography styles
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
+//Navbar styles
 .navbar {
-    border:none ;
+    border:none;
 }
 
-.navbar-default .navbar-brand {
-    color:white;
-}
-
-.navbar-default .navbar-brand:hover {
-    color:white;
-    opacity: 0.7;
-}
-
+.navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
     color:white;
+    &:hover{
+        color:white;
+        opacity: 0.75;
+    }
 }
 
-.navbar-default .navbar-nav > li > a:hover {
-    color:white;
-    opacity: 0.7;
-}
+//Home Page styles
 .home-callout {
 
     margin-top: -20px;
